<resources>
    <string name="app_name">2Change</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_post_ad">PostAdActivity</string>

    <string name="ad_publish">Publish</string>
    <string name="ad_title">Title</string>
    <string name="ad_description">Description</string>
    <string name="ad_add_images">Add some images to you ad!</string>
    <string name="ad_product_info">Product info</string>
    <string name="ad_year">Year</string>
    <string name="ad_original_price">Original price (€)</string>
    <string name="ad_state_label">State</string>
    <string name="ad_estimated_rating">Estimated rating</string>
    <string name="ad_save">Save</string>
    <string name="ad_images">Images</string>

    <string-array name="product_states">
        <item>New - Still in the original package</item>
        <item>Almost new - Very few or no usage marks</item>
        <item>Good - Normal usage marks</item>
        <item>Regular - Heavy usage marks</item>
        <item>Broken - Not woking or unusable</item>
    </string-array>

    <string-array name="ad_types">
        <item>Product</item>
        <item>Service</item>
    </string-array>

    <string-array name="ad_category">
        <item>Small home appliance</item>
        <item>Big home appliance</item>
        <item>Mobile</item>
        <item>PC/Laptop</item>
        <item>Motor</item>
        <item>Clothes</item>
        <item>Home</item>
        <item>Tools</item>
        <item>Instruments</item>
        <item>Toys</item>
        <item>Books</item>
        <item>Services</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are id to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting status. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="action_photo">Photo</string>
    <string name="action_add">Add Item</string>
    <string name="action_edit">Edit Item</string>
    <string name="action_delete">Delete Item</string>
    <string name="action_match">Make match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="cd">content_description</string>
    <string name="title_activity_ads_lists">AdsListsActivity</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="title_activity_ad_lists">AdListsActivity</string>
    <string name="offered">Offered</string>
    <string name="wanted">Wanted</string>
    <string name="product_item_row_image_description">Product item Image for lists</string>
    <string name="ad_list_title">My lists</string>
    <string name="explore">Explore</string>
    <string name="my_lists">My lists</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="searchProfile">Search profile</string>
    <string name="help">Help</string>
    <string name="about">About 2Change</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove</string>
    <string name="remove_wanted_title">Remove wanted item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search product</string>
    <string name="search_hint">Search product</string>
    <string name="matches">Matches</string>
    <string name="close">close</string>
    <string name="your_product">Your product</string>
    <string name="product_s_name">Product\'s name</string>
    <string name="ask_product_description">Describe this product</string>
    <string name="category_hint">Category</string>
    <string name="state_hint">Status of the product</string>
    <string name="year_hint">When did you bought it</string>
    <string name="add_image">add_image</string>
    <string name="post_product">Post product</string>
    <string name="save_changes">Save changes</string>
    <string name="image_hint">Add some images of your product</string>
    <string name="ok">Ok</string>
    <string name="product_s_price">How much did it cost? (€)</string>
    <string name="product_name_error_title">Empty name</string>
    <string name="product_name_error_message">You should give a name to your product</string>
    <string name="product_description_error_title">Empty description</string>
    <string name="product_description_error_message">Describe your product so people know what are you offering</string>
    <string name="product_price_error_title">Empty price</string>
    <string name="product_price_error_message">Without any price we cannot calculate the rating of the product</string>
    <string name="rates">Rates</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="product_image_error_title">No image</string>
    <string name="product_image_error_message">You should post at least one image</string>
    <string name="description_hint_caps">DESCRIPTION</string>
    <string name="category_hint_caps">CATEGORY</string>
    <string name="chat_button">CHAT</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="about_slogan">A second chance to everything.</string>
    <string name="about_text">Developed by:\n
        \nVíctor Sánchez\nFèlix Arribas\nGuillermo Martínez\nAdrián Ruiz\nAndrés Insaurralde\n
\nProject 2Change:
    </string>
    <string name="about_url"><a>https://github.com/visape-uni/PES_2Change</a></string>
    <string name="filter_by_category">Filter by category</string>
    <string name="filter_by_rate">Filter by rate</string>
    <string name="edit">Edit</string>

</resources>
