<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/close_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close_grey600_24dp"
                android:contentDescription="@string/close" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/your_product"
                android:gravity="center"
                android:textSize="20sp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_text"
            android:layout_above="@+id/post_product_button">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/products_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_s_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/products_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ask_product_description"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    style="@style/InputLayoutStyle">
                    <TextView
                        android:text="@string/category_hint"
                        style="@style/InputLabel"/>

                    <Spinner
                        android:id="@+id/category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/label_vertical_spacing"/>
                    <LinearLayout
                        style="@style/LabelDivider" />
                </LinearLayout>

                <LinearLayout
                    style="@style/InputLayoutStyle">
                    <TextView
                        android:text="@string/state_hint"
                        style="@style/InputLabel"/>

                    <Spinner
                        android:id="@+id/state_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/label_vertical_spacing"/>
                    <LinearLayout
                        style="@style/LabelDivider" />
                </LinearLayout>

                <LinearLayout
                    style="@style/InputLayoutStyle">
                    <TextView
                        android:text="@string/year_hint"
                        style="@style/InputLabel"/>

                    <Spinner
                        android:id="@+id/year_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/label_vertical_spacing"/>
                    <LinearLayout
                        style="@style/LabelDivider" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <EditText
                        android:id="@+id/products_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:hint="@string/product_s_price"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:text="@string/image_hint"
                    style="@style/InputLabel"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="8dp"/>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/images_list"
                            android:layout_width="wrap_content"
                            android:layout_height="96dp" />

                        <ImageView
                            android:id="@+id/add_image_button"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:src="@drawable/ic_plus_box_outline_grey600_48dp"
                            android:padding="8dp"
                            android:contentDescription="@string/add_image" />

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/post_product_button"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:text="@string/post_product"
            android:layout_alignParentBottom="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>