<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_photo"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginTop="10dp"
                        android:src="@mipmap/prof_default" />

                    <TextView
                        android:id="@+id/usernameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="USERNAME"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/nameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Name Surname"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:numStars="5" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/offeredTab"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/offeredNum"
                            android:text="0"
                            android:textAlignment="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/offered"
                            android:textAlignment="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/wantedTab"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/wantedNum"
                            android:text="0"
                            android:textAlignment="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/wanted"
                            android:textAlignment="center"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/ratesTab"
                        android:orientation="vertical"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/ratesNum"
                            android:text="0"
                            android:textAlignment="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/rates"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <FrameLayout
                android:id="@+id/contentProfile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"></FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>